[package]
name = "funring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = "0.24.2"
mpris = "2.0.1"

[dependencies.tray-item]
git = "https://github.com/olback/tray-item-rs.git"
features = [ "ksni" ]
